--- a/my-project/src/index.ejs
+++ b/my-project/src/index.ejs
@@ -12,18 +12,17 @@
   </head>
   <body>
     <div
-    id="app"
-    wedia-app-api-path="https://dev-club-wed.wedia-group.com"
-    wedia-app-name="front club-wed"
-    wedia-app-key="2d2600e2dcdcd34a4a138fa1a1609a30819acaad"
-    wedia-app-secret="c21f0779805e48474709868e34726827e88ea558"
-    wedia-app-base-url="/"
-    wedia-app-config-plugin="PACKAGED_Portal"
-    wedia-app-config-path="dev-club-wed"
-    wedia-app-bundle-basename="/_plugins/PACKAGED_VueAppI18n/config/plugin"
-    wedia-app-analytics-session-type="portal"
-    wedia-app-sessionauth="false"
+      id="app"
+      wedia-app-api-path="https://club-wed.wedia-group.com"
+      wedia-app-name="front club-wed"
+      wedia-app-key="2d2600e2dcdcd34a4a138fa1a1609a30819acaad"
+      wedia-app-secret="c21f0779805e48474709868e34726827e88ea558"
+      wedia-app-base-url="/"
+      wedia-app-config-plugin="PACKAGED_Portal"
+      wedia-app-config-path="dev-club-wed"
+      wedia-app-bundle-basename="/_plugins/PACKAGED_VueAppI18n/config/plugin"
+      wedia-app-analytics-session-type="portal"
+      wedia-app-sessionauth="false"
     ></div>
-
   </body>
 </html>
